<resources>
    <string name="app_name">Inventory</string>
    <string name="errormessage">SAVE FAILED\n press to try again.</string>
    <string name="errorInternet">Please check your internet connection.</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">Submit</string>
    <string name="logoutCaps">LOGOUT</string>
    <string name="logoutAlert">Are you sure you want to Logout? </string>
    <string name="permissionMessage">Allow Permissions</string>
    <string name="password">Password</string>
    <string name="dbConfiguration">db configuration</string>
    <string name="serverNameIP">server name / ip</string>
    <string name="dbName">db name</string>
    <string name="port">port</string>
    <string name="username">username</string>
    <string name="test">TEST</string>
    <string name="exit">EXIT</string>
    <string name="read">READ</string>
    <string name="rackId">RACK ID #</string>
    <string name="job">JOB #</string>
    <string name="printMethodNumber">PRINT METHOD NUMBER</string>
    <string name="reasonForFailureHere">reason for failure here</string>
    <string name="saveToBolt">SAVE TO BOLT</string>
    <string name="validate">VALIDATE</string>
    <string name="clear">CLEAR</string>
    <string name="config">CONFIG</string>
    <string name="rackIdRequired">ROCK ID # (Required)</string>
    <string name="jobRequired">JOB # (Required)</string>
    <string name="printRequired">PRINT METHOD NUMBER  (Required)</string>
    <string name="write">WRITE</string>
    <string name="errorServerIp">Enter Server Name / Ip</string>
    <string name="errorDbName">Enter Database Name</string>
    <string name="errorPort">Enter Port</string>
    <string name="errorUsername">Enter Username</string>
    <string name="errorPassword">Enter Password</string>
    <string name="invalidCredentials">Invalid Credentials</string>
</resources>
