<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    android:orientation="vertical"
    android:paddingTop="@dimen/_13sdp"
    android:paddingLeft="@dimen/_13sdp"
    android:paddingRight="@dimen/_13sdp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarSize="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|start"
                android:padding="@dimen/_4sdp"
                android:text="@string/dbConfiguration"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/serverNameIP"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etServerNameOrIP"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text"
                    android:paddingStart="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dbName"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etDbName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/port"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPort"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text"
                    android:paddingStart="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPasswrod"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/edit_text"
                    android:inputType="textVisiblePassword"
                    android:paddingStart="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12sdp"
                    tools:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.dd.processbutton.FlatButton
                        android:id="@+id/fbTest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:text="@string/test"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        app:pb_colorNormal="@color/color_primary_dark"
                        app:pb_colorPressed="@color/colorPrimary"
                        app:pb_cornerRadius="@dimen/_5sdp" />


                    <com.dd.processbutton.FlatButton
                        android:id="@+id/fbExit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_weight="1"
                        android:text="@string/exit"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        app:pb_colorNormal="@color/color_primary_dark"
                        app:pb_colorPressed="@color/colorPrimary"
                        app:pb_cornerRadius="@dimen/_5sdp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
